--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,51 +12,52 @@
     "export": "next export"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@mui/material": "^5.15.0",
-    "@mui/icons-material": "^5.15.0",
-    "@mui/system": "^5.15.0",
+    "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@emotion/cache": "^11.11.0",
-    "axios": "^1.6.2",
-    "swr": "^2.2.4",
-    "react-hook-form": "^7.48.2",
     "@hookform/resolvers": "^3.3.2",
-    "yup": "^1.4.0",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
+    "@mui/material-nextjs": "^7.3.2",
+    "@mui/system": "^5.15.0",
+    "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
+    "eventsource": "^2.0.2",
+    "framer-motion": "^10.16.16",
+    "html2canvas": "^1.4.1",
+    "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
+    "next": "14.0.4",
+    "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.5.3",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "socket.io-client": "^4.7.4",
-    "eventsource": "^2.0.2",
-    "js-cookie": "^3.0.5",
-    "date-fns": "^2.30.0",
-    "react-hot-toast": "^2.4.1",
-    "framer-motion": "^10.16.16",
-    "react-intersection-observer": "^9.5.3",
-    "react-copy-to-clipboard": "^5.1.0",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
-    "uuid": "^9.0.1"
+    "swr": "^2.2.4",
+    "uuid": "^9.0.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "@types/js-cookie": "^3.0.6",
-    "@types/react-syntax-highlighter": "^15.5.11",
     "@types/react-copy-to-clipboard": "^5.0.7",
+    "@types/react-dom": "^18.2.18",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@types/uuid": "^9.0.7",
-    "typescript": "^5.3.3",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
-    "prettier": "^3.1.1",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.0.4",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6"
+    "prettier": "^3.1.1",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
